@@ -5,8 +5,10 @@ StatSum <- proto(Stat, {
   icon <- function(.) textGrob(expression(Sigma), gp=gpar(cex=4))
   
   calculate <- function(., data, scales, ...) {
-    counts <- rename(dftable(data[, c("x", "y")]), c("Freq"="n"))
-    counts$prop <- counts$n / sum(counts$n)
+    if (is.null(data$weight)) data$weight <- 1
+    
+    counts <- as.data.frame(xtabs(weight ~ x + y, data), responseName="sum")
+    counts$prop <- counts$sum / sum(counts$sum)
     counts$group <- 1
     
     counts
@@ -18,8 +20,9 @@ StatSum <- proto(Stat, {
     "ggfluctuation" = "Fluctuation diagram, which is very similar"
   )
   desc_outputs <- list(
-    "n" = "number of observations at position",
-    "prop" = "percent of points in that panel at that position"
+    "sum" = "number of observations at position",
+    "prop" = "percent of points in that panel at that position",
+    "round_any" = "for rounding continuous observations to desired level of accuracy"
   )
   
   examples <- function(.) {
@@ -31,6 +34,11 @@ StatSum <- proto(Stat, {
     d + stat_sum(aes(group=cut))
     # by clarity
     d + stat_sum(aes(group=clarity))
+
+    # Can also weight by another variable
+    d + stat_sum(aes(group=1, weight = price))
+    d + stat_sum(aes(group=1, weight = price, size = ..sum..))
+    
     
     # Or using qplot
     qplot(cut, clarity, data=diamonds)
