@@ -82,6 +82,7 @@ scale_x_pow <- function(...) ScalePower$new(..., variable = "x")
 scale_x_pow10 <- function(...) ScalePow10$new(..., variable = "x")
 scale_x_prob <- function(...) ScaleProbability$new(..., variable = "x")
 scale_x_probit <- function(...) ScaleProbit$new(..., variable = "x")
+scale_x_reverse <- function(...) ScaleReverse$new(..., variable = "x")
 scale_x_sqrt <- function(...) ScaleSqrt$new(..., variable = "x")
 scale_xend_asn <- function(...) ScaleAsn$new(..., variable = "xend")
 scale_xend_atanh <- function(...) ScaleAtanh$new(..., variable = "xend")
@@ -96,6 +97,7 @@ scale_xend_pow <- function(...) ScalePower$new(..., variable = "xend")
 scale_xend_pow10 <- function(...) ScalePow10$new(..., variable = "xend")
 scale_xend_prob <- function(...) ScaleProbability$new(..., variable = "xend")
 scale_xend_probit <- function(...) ScaleProbit$new(..., variable = "xend")
+scale_xend_reverse <- function(...) ScaleReverse$new(..., variable = "xend")
 scale_xend_sqrt <- function(...) ScaleSqrt$new(..., variable = "xend")
 scale_y_asn <- function(...) ScaleAsn$new(..., variable = "y")
 scale_y_atanh <- function(...) ScaleAtanh$new(..., variable = "y")
@@ -112,6 +114,7 @@ scale_y_pow <- function(...) ScalePower$new(..., variable = "y")
 scale_y_pow10 <- function(...) ScalePow10$new(..., variable = "y")
 scale_y_prob <- function(...) ScaleProbability$new(..., variable = "y")
 scale_y_probit <- function(...) ScaleProbit$new(..., variable = "y")
+scale_y_reverse <- function(...) ScaleReverse$new(..., variable = "y")
 scale_y_sqrt <- function(...) ScaleSqrt$new(..., variable = "y")
 scale_yend_asn <- function(...) ScaleAsn$new(..., variable = "yend")
 scale_yend_atanh <- function(...) ScaleAtanh$new(..., variable = "yend")
@@ -126,6 +129,7 @@ scale_yend_pow <- function(...) ScalePower$new(..., variable = "yend")
 scale_yend_pow10 <- function(...) ScalePow10$new(..., variable = "yend")
 scale_yend_prob <- function(...) ScaleProbability$new(..., variable = "yend")
 scale_yend_probit <- function(...) ScaleProbit$new(..., variable = "yend")
+scale_yend_reverse <- function(...) ScaleReverse$new(..., variable = "yend")
 scale_yend_sqrt <- function(...) ScaleSqrt$new(..., variable = "yend")
 scale_z_asn <- function(...) ScaleAsn$new(..., variable = "z")
 scale_z_atanh <- function(...) ScaleAtanh$new(..., variable = "z")
@@ -141,6 +145,7 @@ scale_z_pow <- function(...) ScalePower$new(..., variable = "z")
 scale_z_pow10 <- function(...) ScalePow10$new(..., variable = "z")
 scale_z_prob <- function(...) ScaleProbability$new(..., variable = "z")
 scale_z_probit <- function(...) ScaleProbit$new(..., variable = "z")
+scale_z_reverse <- function(...) ScaleReverse$new(..., variable = "z")
 scale_z_sqrt <- function(...) ScaleSqrt$new(..., variable = "z")
 stat_bin <- StatBin$new
 stat_boxplot <- StatBoxplot$new
